--- a/TP1/assets/css/style.css
+++ b/TP1/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
     font-family: 'Lato', sans-serif;
-    background-color:#00897b;
+    background-color: #18191a;
+    color: #FFF;
 }
 
 .container {
-    background-color: #4ebaaa;
+    background-color: #242526;
 }
 
 input:invalid {
