--- a/TP1/assets/css/style.css
+++ b/TP1/assets/css/style.css
@@ -1,11 +1,12 @@
 body {
     font-family: 'Lato', sans-serif;
-    background-color: #18191a;
+    background-color: #363945;
     color: #FFF;
 }
 
 .container {
-    background-color: #242526;
+    background-color: #e37602;
+    border-radius: 3px;
 }
 
 input:invalid {
@@ -17,7 +18,7 @@ input:focus:invalid {
 }
 
 .form-control {
-    border-radius: 0;
+    border-radius: 3px;
     background-clip: unset;
 }
 
@@ -26,5 +27,6 @@ input:focus:invalid {
 }
 
 .btn-primary {
-    border-radius: 0;
+    border-radius: 3px;
+    background-color: #0072b5;
 }
